# new_AoC

./: .gitignore  CMakeLists.txt  addDay.py  enviroment.sh
2015/: CMakeLists.txt  addDay.py  main.cpp
2015/TestData/: input01A.txt
2015/include/: Day01.h  Day02.h  Day03.h  Day04.h  Day05.h  Day06.h  DayBase.h  DayExecutor.h  DayResult.h  TestData.h
2015/src/: Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  DayExecutor.cpp
2015/templates/: DayXX.h
2024/: CMakeLists.txt  main.cpp  test.cpp
2024/TestData/: input03A.txt
2024/include/: Day01.h  Day02.h  Day03.h  Day04.h  Day05.h  Day06.h  Day07.h  Day08.h  Day09.h  Day10.h  Day11.h  Day12.h  Day13.h  Day14.h  Day15.h  Day16.h  Day17.h  Day18.h  Day19.h  Day20.h  Day21.h  Day22.h  Day23.h  DayBase.h
2024/src/: Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day19.cpp  Day20.cpp  Day21.cpp  Day22.cpp  Day23.cpp  DayExecutor.cpp  test.cpp
common/: CMakeLists.txt
common/AdventOfCode/: CMakeLists.txt
common/AdventOfCode/inc/AoC/: Assertion.h  GenericHasher.h  Grid2D.h  LinkedList.h  Position.h  Vector2D.h  aoc.h
common/AdventOfCode/src/: LinkedList.cpp  Ranges.cpp  Ranges.h  aoc.cpp
common/AdventOfCode/tests/: CMakeLists.txt  LinkedList.cpp
templates/: DayXX.cpp  DayXX.h
year_template/: CMakeLists.txt  main.cpp
year_template/include/: Day01.h  Day02.h  DayBase.h
year_template/src/: Day01.cpp  Day02.cpp  DayExecutor.cpp
year_template/templates/: DayXX.cpp
